--- a/index.html
+++ b/index.html
@@ -1,12 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Html</title>
-</head>
-<body>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="assets/img/favicon.ico" />
+    <title>cv</title>
+  </head>
+  <body>
+    <header class="header">
+        <nav>
+          <ul class="nav-list">
+            <li>
+              <a href="#profile" class="nav-link">Profile</a>
+            </li>
+            <li>
+              <a href="#contacts" class="nav-link">Contacts</a>
+            </li>
+            <li>
+              <a href="#about" class="nav-link">About</a>
+            </li>
+            <li>
+              <a href="#skills" class="nav-link">Skills</a>
+            </li>
+            <li><a href="#code" class="nav-link">Code</a></li>
+            <li>
+              <a href="#work" class="nav-link">Work experience</a>
+            </li>
+            <li>
+              <a href="#education" class="nav-link">Education</a>
+            </li>
+            <li>
+              <a href="#english" class="nav-link">English</a>
+            </li>
+            <li><a href="#projects" class="nav-link">Projects</a></li>
+          </ul>
+        </nav>
+    </header>
+    <main class="main">
+      <div class="container main-container">
+        <section class="section section-profile" id="profile">
+          <img
+            src="assets/img/Cat.png"
+            alt="Photo"
+            class="section-profile-logo"
+          />
+          <div class="section-profile-title">
+            <h1 class="section-title main-title">Boris Masiuk</h1>
+            <h3 class="section-subtitle">Junior Front-End Developer</h3>
+          </div>
+        </section>
+        <section class="section" id="contacts">
+          <h2 class="section-title">Contacts</h2>
+          <ul class="section-list">
+            <li>Phone number: +38 (071) 356-13-97;</li>
+            <li>E-mail: borisnoteprog@gmail.com;</li>
+            <li>Telegram: @totkotBoris</li>
+            <li>Discord: boris4ever#4331;</li>
+          </ul>
+        </section>
+        <section class="section" id="about">
+          <h2 class="section-title">About</h2>
+          <p>
+            My goal is to start front-end development career. Now i'm studying
+            in RSSchool. I enjoy the learning and creating webpages. I have
+            created a couple of sites on CMS "Tilda".
+          </p>
+        </section>
+        <section class="section" id="skills">
+          <h2 class="section-title">Skills</h2>
+          <p>Basic knowledge of HTML, CSS, JavaScript.</p>
+        </section>
+        <section class="section" id="code">
+          <h2 class="section-title">Code</h2>
+          <p>Task from CODEWARS.</p>
+          <pre class="pre"><code>function maskify(cc) {
+        cc = cc.split('');
+        for(let i = 0; i < cc.length - 4; i++) {
+          cc[i] = '#'
+        }
+          cc = cc.join('');
+          return cc;
+        }
+      </code></pre>
+        </section>
+        <section class="section" id="work">
+          <h2 class="section-title">Work</h2>
+          <p>2020-2021 - create websites on CMS "Tilda"</p>
+        </section>
+        <section class="section" id="education">
+          <h2 class="section-title">Education</h2>
+          <p>Donetsk Transport Academy (2015-2019), logistician .</p>
+        </section>
+        <section class="section" id="english">
+          <h2 class="section-title">English</h2>
+          <p>A2 - Pre Intermediate.</p>
+        </section>
+        <section class="section" id="projects">
+          <h2 class="section-title">Projects</h2>
+          <p>My <a href="https://bormas.github.io/rsschool-cv/cv">CV</a></p>
+        </section>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="container footer-container">
+        <p>@2022</p>
+        <a href="https://github.com/bormas">
+          <img class="git-logo" src="assets/img/git.svg" alt="git-logo" />
+        </a>
+        <a href="https://rs.school/js/"
+          ><img
+            class="rss-logo"
+            src="assets/img/rs_school_js.svg"
+            alt="rsschool"
+        /></a>
+      </div>
+    </footer>
+  </body>
 </html>
