fix: code symbol

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <p>Task from CODEWARS.</p>
           <pre class="pre"><code>function maskify(cc) {
         cc = cc.split('');
-        for(let i = 0; i < cc.length - 4; i++) {
+        for(let i = 0; i &lt; cc.length - 4; i++) {
           cc[i] = '#'
         }
           cc = cc.join('');
