refactor index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
         </section>
         <section class="section" id="skills">
           <h2 class="section-title">Skills</h2>
-          <p>Basic knowledge of HTML, CSS, JavaScript.</p>
+           <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript (in the process)</li>
+          </ul>
         </section>
         <section class="section" id="code">
           <h2 class="section-title">Code</h2>
@@ -99,7 +103,9 @@
         </section>
         <section class="section" id="projects">
           <h2 class="section-title">Projects</h2>
-          <p>My <a href="https://bormas.github.io/rsschool-cv/cv">CV</a></p>
+            <ul>
+              <li> My <a href="https://bormas.github.io/rsschool-cv/cv">CV</a> </li>
+            </ul>
         </section>
       </div>
     </main>
