refactor index html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </section>
         <section class="section" id="skills">
           <h2 class="section-title">Skills</h2>
-           <ul>
+           <ul class="section-list">
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript (in the process)</li>
@@ -103,7 +103,7 @@
         </section>
         <section class="section" id="projects">
           <h2 class="section-title">Projects</h2>
-            <ul>
+            <ul class="section-list">
               <li> My <a href="https://bormas.github.io/rsschool-cv/cv">CV</a> </li>
             </ul>
         </section>
